--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@
                         <img src="./keshav.png" class="tutor-img" alt="Keshav Kishore">
                         <h4>Keshav Kishore</h4>
                         <p>Founder & Lead Educator</p>
+                        <p>TCS & LTI Selected SDE</p>
                     </div>
                 </div>
 
@@ -725,6 +726,7 @@
                         <img src="./Trishna.jpeg" class="tutor-img" alt="Trishna Dey">
                         <h4>Trishna Dey</h4>
                         <p>Managing Director</p>
+                        <p>B.Tech CYS</p>
                     </div>
                 </div>
 
@@ -734,6 +736,7 @@
                         <img src="./Nitesh.png" class="tutor-img" alt="Nitesh Kumar">
                         <h4>Nitesh Kumar</h4>
                         <p>Mathematics Tutor</p>
+                        <p>B.Tech ECE</p>
                     </div>
                 </div>
 
@@ -742,17 +745,9 @@
                         <img src="./Aryan.jpeg" class="tutor-img" alt="Aryan Baranwal">
                         <h4>Aryan Baranwal</h4>
                         <p>Polity & Humanities</p>
+                        <p>TCS Selected SDE</p>
                     </div>
                 </div>
-
-                <div class="col-md-6 col-lg-3 mb-4">
-                    <div class="tutor-card">
-                        <img src="./rishav.jpeg" class="tutor-img" alt="Rishav Kishore">
-                        <h4>Rishav Kishore</h4>
-                        <p>Science Educator</p>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
@@ -823,19 +818,19 @@
         <div class="row">
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="student1.jpg" class="img-fluid rounded shadow">
+                <img src="./OIP.jpg" class="img-fluid rounded shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="student2.jpg" class="img-fluid rounded shadow">
+                <img src="./web-stock-online-learning-b-x-1024.jpg" class="img-fluid rounded shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="student3.jpg" class="img-fluid rounded shadow">
+                <img src="./rishav.jpeg" class="img-fluid rounded shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="student4.jpg" class="img-fluid rounded shadow">
+                <img src="./s1.jpg" class="img-fluid rounded shadow">
             </div>
 
         </div>
