--- a/index.html
+++ b/index.html
@@ -559,6 +559,18 @@
                 transform: rotate(360deg);
             }
         }
+
+        .student-img {
+            width: 100%;
+            height: 220px;
+            object-fit: cover;
+            border-radius: 12px;
+            transition: 0.3s;
+        }
+
+        .student-img:hover {
+            transform: scale(1.05);
+        }
     </style>
 </head>
 
@@ -818,19 +830,19 @@
         <div class="row">
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./OIP.jpg" class="img-fluid rounded shadow">
+                <img src="./OIP.jpg" class="student-img shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./web-stock-online-learning-b-x-1024.jpg" class="img-fluid rounded shadow">
+                <img src="./web-stock-online-learning-b-x-1024.jpg" class="student-img shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./rishav.jpeg" class="img-fluid rounded shadow">
+                <img src="./s1.jpg" class="student-img shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./s1.jpg" class="img-fluid rounded shadow">
+                <img src="./s1.jpg" class="student-img shadow">
             </div>
 
         </div>
