--- a/index.html
+++ b/index.html
@@ -760,6 +760,22 @@
                         <p>TCS Selected SDE</p>
                     </div>
                 </div>
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="tutor-card">
+                        <img src="./Pragati.jpeg" class="tutor-img" alt="Pragati">
+                        <h4>Dr Pragati</h4>
+                        <p>Biology Expert, NEET Qualified</p>
+                        <p>BDS, Awadh Dental College & Hospital</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="tutor-card">
+                        <img src="./Intakhab.jpeg" class="tutor-img" alt="Intakhab">
+                        <h4>Intakhab Alam</h4>
+                        <p>B.Tech CSE</p>
+                        <p>Programming & Data Structures</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
