--- a/index.html
+++ b/index.html
@@ -794,21 +794,21 @@
         <div class="row mt-4">
             <div class="col-md-4 mb-4">
                 <div class="card p-3 shadow-sm">
-                    <p>"GyanVriksh Academy helped me excel in my board exams. The one-on-one attention made all the
+                    <p>"Keshav Sir helped me excel in my board exams. The one-on-one attention made all the
                         difference!"</p>
-                    <h6 class="text-end mb-0">— Ananya Sharma</h6>
+                    <h6 class="text-end mb-0">— Anu Pandey</h6>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card p-3 shadow-sm">
                     <p>"Highly recommend these classes! Very personalized and interactive."</p>
-                    <h6 class="text-end mb-0">— Rahul Mehta</h6>
+                    <h6 class="text-end mb-0">— Ushnish Mahata</h6>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card p-3 shadow-sm">
                     <p>"The tutors are friendly and knowledgeable. My math scores have improved drastically."</p>
-                    <h6 class="text-end mb-0">— Sneha Verma</h6>
+                    <h6 class="text-end mb-0">— Sakshi Yadav</h6>
                 </div>
             </div>
         </div>
@@ -821,22 +821,22 @@
 
             <div class="col-md-6 mb-4">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/IptC7oeTNkE" title="Student Testimonial 1"
+                    <iframe src="" title="Student Testimonial 1"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
                 </div>
-                <p class="text-center mt-2">Riya shares her success story</p>
+                <p class="text-center mt-2">Ushnish shares his success story</p>
             </div>
 
             <div class="col-md-6 mb-4">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/_FTHYBUGfB8" title="Student Testimonial 2"
+                    <iframe src="" title="Student Testimonial 2"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
                 </div>
-                <p class="text-center mt-2">Aman talks about his learning journey</p>
+                <p class="text-center mt-2">Sakshi talks about her learning journey</p>
             </div>
 
         </div>
