--- a/index.html
+++ b/index.html
@@ -776,6 +776,15 @@
                         <p>Programming & Data Structures</p>
                     </div>
                 </div>
+
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <div class="tutor-card">
+                        <img src="./Siddhnat.jpeg" class="tutor-img" alt="Siddhant Singh">
+                        <h4>Siddhant Singh Rajput</h4>
+                        <p>Maths & Science Educator</p>
+                        <p>LTI Selected SDE</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
