--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="tutor-card">
                         <img src="./Siddhnat.jpeg" class="tutor-img" alt="Siddhant Singh">
-                        <h4>Siddhant Singh Rajput</h4>
+                        <h4>Siddhant Singh</h4>
                         <p>Maths & Science Educator</p>
                         <p>LTI Selected SDE</p>
                     </div>
