--- a/index.html
+++ b/index.html
@@ -621,6 +621,16 @@
         <p class="hero-subtext">
             We offer One-to-One classes for a personalized learning experience!
         </p>
+        <p class="hero-location" style="color:white;font-weight:600;">
+            📍 Located Near Sodepur Railway Station, Kolkata
+        </p>
+        <p style="color:#FFD700;font-weight:600;">
+            📍 Offline Classes: Sodepur, Kolkata
+        </p>
+
+        <p style="color:#00FFFF;font-weight:600;">
+            💻 Online Classes: Available Across India
+        </p>
 
         <a href="#contact-form" class="btn-highlight">Book a Trial Session</a>
         <p class="text-center mt-3" style="color:white;font-weight:600;font-size:18px;">
@@ -634,10 +644,10 @@
             <h2 class="text-center about-title">About Us</h2>
 
             <p class="about-text">
-                <strong>GyanVriksh Academy</strong> is an online education platform focused on building strong academic
-                foundations
-                and guiding students toward success. We provide expert online tuitions for
-                <strong>Classes VI–XII</strong>, covering all subjects at the school level and specialized coaching in
+                <strong>GyanVriksh Academy</strong> is a dedicated offline coaching institute in Sodepur, Kolkata
+                focused on building strong academic foundations and guiding students toward success. We provide expert
+                tuitions for <strong>Classes VI–XII</strong>, covering all subjects at the school level and specialized
+                coaching in
                 <strong>Physics, Chemistry, Mathematics, and Biology</strong> for senior classes.
             </p>
 
@@ -649,6 +659,10 @@
                 HTML, and CSS. Additionally, we offer <strong>placement guidance for college students</strong> and
                 coaching for
                 <strong>government job aspirants</strong> in Quantitative Aptitude and Reasoning.
+            </p>
+            <p class="about-text">
+                <strong>Address:</strong> GyanVriksh Academy, Near Sodepur Railway Station, Landmark - Rathindra Cinema,
+                Sodepur, Kolkata - 700110
             </p>
         </div>
     </div>
@@ -929,6 +943,11 @@
         <p>
             Email: gyanvriksh.edu@gmail.com |
             Phone: <span class="phone">+91-8585895058</span>
+        </p>
+
+        <p>
+            <strong>Address:</strong> GyanVriksh Academy, Near Sodepur Railway Station,<br>
+            Landmark - Rathindra Cinema, Sodepur, Kolkata - 700110
         </p>
     </footer>
 
