--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
             📍 Offline Classes: Sodepur, Kolkata
         </p>
 
-        <p style="color:#00FFFF;font-weight:600;">
+        <p style="color:#FFA726;font-weight:600;">
             💻 Online Classes: Available Across India
         </p>
 
@@ -644,8 +644,9 @@
             <h2 class="text-center about-title">About Us</h2>
 
             <p class="about-text">
-                <strong>GyanVriksh Academy</strong> is a dedicated offline coaching institute in Sodepur, Kolkata
-                focused on building strong academic foundations and guiding students toward success. We provide expert
+                <strong>GyanVriksh Academy</strong> is a dedicated offline coaching institute in <strong>Sodepur,
+                    Kolkata</strong> focused on building strong academic foundations and guiding students toward
+                success. We provide expert
                 tuitions for <strong>Classes VI–XII</strong>, covering all subjects at the school level and specialized
                 coaching in
                 <strong>Physics, Chemistry, Mathematics, and Biology</strong> for senior classes.
@@ -661,8 +662,9 @@
                 <strong>government job aspirants</strong> in Quantitative Aptitude and Reasoning.
             </p>
             <p class="about-text">
-                <strong>Address:</strong> GyanVriksh Academy, Near Sodepur Railway Station, Landmark - Rathindra Cinema,
-                Sodepur, Kolkata - 700110
+                <strong>Address:</strong> GyanVriksh Academy, <strong>Near Sodepur Railway Station, Landmark - Rathindra
+                    Cinema,
+                    Sodepur, Kolkata - 700110</strong>
             </p>
         </div>
     </div>
@@ -946,8 +948,8 @@
         </p>
 
         <p>
-            <strong>Address:</strong> GyanVriksh Academy, Near Sodepur Railway Station,<br>
-            Landmark - Rathindra Cinema, Sodepur, Kolkata - 700110
+            <strong>Address:</strong> GyanVriksh Academy, <strong>Near Sodepur Railway Station,<br>
+                Landmark - Rathindra Cinema, Sodepur, Kolkata - 700110</strong>
         </p>
     </footer>
 
