--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 
 
 <head>
+    <meta name="description"
+        content="Best coaching institute in Sodepur, Kolkata for Classes VI-XII. Expert tutors for Physics, Chemistry, Maths, Biology, Programming & Government Exams. Book Free Trial Today!">
+
+    <meta name="keywords"
+        content="Coaching in Sodepur, Tuition in Kolkata, Maths Tutor Sodepur, Physics Coaching Kolkata, Programming Classes Sodepur, GyanVriksh Academy">
+
+    <meta name="author" content="GyanVriksh Academy">
     <meta name="google-site-verification" content="aML73LJoC7HDQCz-WCtKQgBGSokUYvzE81OAVn-38Qc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -951,6 +958,9 @@
             <strong>Address:</strong> GyanVriksh Academy, <strong>Near Sodepur Railway Station,<br>
                 Landmark - Rathindra Cinema, Sodepur, Kolkata - 700110</strong>
         </p>
+        <iframe src="https://www.google.com/maps/embed?pb=YOUR_MAP_LINK" width="100%" height="300" style="border:0;"
+            allowfullscreen="" loading="lazy">
+        </iframe>
     </footer>
 
     <footer class="mini-footer">
