--- a/index.html
+++ b/index.html
@@ -875,23 +875,28 @@
         </div>
     </div>
     <section class="container mt-5">
-        <h2 class="text-center mb-4">Our Students</h2>
+        <h2 class="text-center mb-4">Our Proud Students</h2>
         <div class="row">
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./OIP.jpg" class="student-img shadow">
+                <img src="./ANU.jpeg" class="student-img shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./web-stock-online-learning-b-x-1024.jpg" class="student-img shadow">
+                <img src="./USHNISH.jpeg" class="student-img shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./s1.jpg" class="student-img shadow">
+                <img src="./SAKSHI.jpeg" class="student-img shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./s1.jpg" class="student-img shadow">
+                <img src="./SWASTIKA.jpeg" class="student-img shadow">
+            </div>
+            <div class="col-12 text-center mt-3">
+                <p style="font-weight:600; font-size:18px; color:#0d47a1;">
+                    ✨ And Many More Successful Students...
+                </p>
             </div>
 
         </div>
