--- a/index.html
+++ b/index.html
@@ -570,14 +570,13 @@
 
         .student-img {
             width: 100%;
-            height: 220px;
-            object-fit: cover;
-            border-radius: 12px;
+            height: 240px;
+            object-fit: contain;
+            border-radius: 14px;
+            background: white;
+            padding: 8px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
             transition: 0.3s;
-        }
-
-        .student-img:hover {
-            transform: scale(1.05);
         }
     </style>
 </head>
