--- a/index.html
+++ b/index.html
@@ -183,6 +183,15 @@
             position: relative;
         }
 
+        .proud-title {
+            font-weight: 900;
+            font-size: 40px;
+            background: linear-gradient(90deg, #0d47a1, #2e7d32, #ff9800);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            letter-spacing: 1px;
+        }
+
         .methodology-step::after {
             content: '\2192';
             font-size: 24px;
@@ -874,7 +883,9 @@
         </div>
     </div>
     <section class="container mt-5">
-        <h2 class="text-center mb-4">Our Proud Students</h2>
+        <h2 class="text-center mb-4 proud-title">
+            Our Proud Students
+        </h2>
         <div class="row">
 
             <div class="col-md-3 col-6 mb-3">
@@ -894,7 +905,7 @@
             </div>
             <div class="col-12 text-center mt-3">
                 <p style="font-weight:600; font-size:18px; color:#0d47a1;">
-                    ✨ And Many More Successful Students...
+                    ✨ And Many More Students...
                 </p>
             </div>
 
