--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
             </div>
             <div class="col-12 text-center mt-3">
                 <p style="font-weight:600; font-size:18px; color:#0d47a1;">
-                    ✨ And Many More Students...
+                    ✨ And Many More...
                 </p>
             </div>
 
