--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="google-site-verification" content="aML73LJoC7HDQCz-WCtKQgBGSokUYvzE81OAVn-38Qc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Tutors - Quality Education</title>
+    <title> Gyan Vriksh Academy | Best Coaching Institute in Sodepur Kolkata for Class VI–XII & NEET</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
