--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
             </div>
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./USHNISH.jpeg" class="student-img shadow">
+                <img src="./USHNISH - Copy.jpeg" class="student-img shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
