--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
         <img src="./web-stock-online-learning-b-x-1024.jpg" alt="Student Left" class="popup-left-img">
         <img src="./web-stock-online-learning-b-x-1024.jpg" alt="Student Right" class="popup-right-img">
 
-        <img src="./Screenshot 2026-01-25 033020.png" alt="Logo" class="profile-img">
+        <img src="./newlogo.jpeg" alt="Logo" class="profile-img">
         <h1 class="hero-title">
             Transform Your Learning with
             <span class="brand">GyanVriksh Academy</span>
