--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            object-fit: cover;
+            object-fit: contain;
+            background: white;
+            padding: 10px;
             border: 5px solid white;
             margin-bottom: 15px;
         }
