--- a/index.html
+++ b/index.html
@@ -344,7 +344,6 @@
 
             .tagline .harvest {
                 display: block;
-                /* NEXT LINE */
                 margin-left: 0;
                 margin-top: 10px;
             }
@@ -623,7 +622,7 @@
         <img src="./web-stock-online-learning-b-x-1024.jpg" alt="Student Left" class="popup-left-img">
         <img src="./web-stock-online-learning-b-x-1024.jpg" alt="Student Right" class="popup-right-img">
 
-        <img src="./newlogo.jpeg" alt="Logo" class="profile-img">
+        <img src="./newlogo.png" alt="Logo" class="profile-img">
         <h1 class="hero-title">
             Transform Your Learning with
             <span class="brand">GyanVriksh Academy</span>
