--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
         }
 
         .profile-img {
-            width: 150px;
-            height: 150px;
+            width: 170px;
+            height: 170px;
             border-radius: 50%;
-            object-fit: contain;
+            object-fit: cover;
+            transform: scale(1.15);
+            border: 5px solid #16a34a;
+            box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
             background: white;
-            padding: 10px;
-            border: 5px solid white;
-            margin-bottom: 15px;
         }
 
         .btn-highlight {
