--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
         }
 
         .profile-img {
-            width: 170px;
-            height: 170px;
+            width: 190px;
+            height: 190px;
             border-radius: 50%;
             object-fit: cover;
-            transform: scale(1.15);
+            object-position: center;
+            transform: scale(1.28);
             border: 5px solid #16a34a;
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
-            background: white;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
         }
 
         .btn-highlight {
