--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
         <div class="row">
 
             <div class="col-md-3 col-6 mb-3">
-                <img src="./ANU.jpeg" class="student-img shadow">
+                <img src="./Samrish.jpeg" class="student-img shadow">
             </div>
 
             <div class="col-md-3 col-6 mb-3">
